feat: add placeholder to the project
